# ai4comms-playground

./: .gitignore  .gitmodules  AGENTS.md  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml
.claude/: bootstrap-version.json
.claude/rules/: branch-freshness.md  dev-patterns.md  playground-guardrails.md
.claude/skills/cherry-pick-pr/: SKILL.md
.claude/skills/docx/: SKILL.md
.claude/skills/docx/references/: brand-integration.md  creating-new-documents.md  critical-rules.md
.claude/skills/instruction-audit/: SKILL.md
.claude/skills/messaging-framework/: SKILL.md
.claude/skills/notebooklm/: SKILL.md
.claude/skills/notebooklm/references/: api-patterns.md  artifact-types.md  post-processing.md
.claude/skills/notebooklm/scripts/: brand_inject.py  nlm_workflow.py  test_all_artifacts.py
.claude/skills/organic-social-campaign/: SKILL.md
.claude/skills/paid-social-campaign/: LICENSE.txt  SKILL.md
.claude/skills/pdf/: SKILL.md
.claude/skills/plugin-builder/: SKILL.md
.claude/skills/pptx/: SKILL.md
.claude/skills/pptx-hd/: SKILL.md
.claude/skills/press-release/: SKILL.md
.claude/skills/proposal/: SKILL.md
.claude/skills/quality-check/: SKILL.md
.claude/skills/remotion-video/: .deps.json  SKILL.md
.claude/skills/skill-reviewer/: SKILL.md
.claude/skills/source-skill/: SKILL.md
.claude/skills/xlsx/: SKILL.md
.codex/: config.toml
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: sync-upstream.yml
companies/ai4comms/: charter.json  profile.json
scripts/: setup.sh
(+16 files in other folders)
